Youtube Demo/src/objects/Region__c.object
<CustomObject>
    <fields>
        <fullName>Region_Description__c</fullName>
        <label>Region Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Support_Phone__c</fullName>
        <label>Support Phone</label>
        <type>Phone</type>
    </fields>
    <label>Region</label>
    <nameField>
        <label>Region ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>